set up db and initial setup for hotel get endpoint

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=demo
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.h2.console.enabled=true
+spring.data.jpa.repositories.bootstrap-mode=default
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+server.servlet.context-path=/bookingdemo
+spring.jpa.generate-ddl=true
+spring.jpa.defer-datasource-initialization=true
